--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -35,7 +35,7 @@
             <div class="banner-content xxxxl">
               <div class="xxxl">
                 {{ ticketsService.myTicket.id_skill?.cd_skill }}
-                {{ ticketsService.myTicket.cd_number }}
+                {{ ticketsService.myTicket.id_position }}
 
               </div>
             </div>
