--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="shadow-box animated fadeIn m-4 p-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="saturno-container shadow-box animated fadeIn">
 
   <div class="jumbotron">
     <h2>Bienvenido</h2>
@@ -7,7 +7,7 @@
 
   <button class="btn btn-primary btn-lg btn-block m-1" routerLink="/public" role="button">OBTENER TURNO</button>
   <!-- <button class="btn btn-dark m-1" routerLink="/register" role="button">REGISTRARME</button> -->
-
+  <span style="font-size: small;color:gray">{{date}}</span>
   <div class="container mt-5">
     <div class="row" style="align-items: center;">
       <div class="col-6 footer-text">
@@ -18,6 +18,34 @@
       </div>
     </div>
   </div>
+</div>
 
 
+<div class="saturno-footer">
+  <div class="row">
+    <div *ngIf="ticketsService.companyData" class="col">
+      <span class="footer-icon-menu" routerLink="/public/screen">
+        <mat-icon>list_alt</mat-icon>
+        <div>Ver Pantalla</div>
+      </span>
+    </div>
+    <div *ngIf="!ticketsService.companyData" class="col">
+      <span class="footer-icon-menu" routerLink="/public/screen">
+        <mat-icon>search</mat-icon>
+        <div>Buscar Empresa</div>
+      </span>
+    </div>
+    <div class="col">
+      <span class="footer-icon-menu" routerLink="/login">
+        <mat-icon>login</mat-icon>
+        <div>Login</div>
+      </span>
+    </div>
+    <div class="col">
+      <span class="footer-icon-menu" routerLink="/contact">
+        <mat-icon>comment</mat-icon>
+        <div>Contacto</div>
+      </span>
+    </div>
+  </div>
 </div>
