--- a/src/app/pages/public/screen/screen.component.html
+++ b/src/app/pages/public/screen/screen.component.html
@@ -71,7 +71,7 @@
                 <div *ngIf="!ticketsService.myTicket?.id_desk">
                     <span class="xxxxl">
                         {{ ticketsService.myTicket?.id_skill.cd_skill }}
-                        {{ ticketsService.myTicket?.cd_number }}
+                        {{ ticketsService.myTicket?.id_position }}
                     </span>
                 </div>
 
@@ -116,9 +116,10 @@
                     </span>
                 </div>
                 <div>
-                    <span class="xxxxl">
-                        {{ ticketsService.lastTicket?.id_skill.cd_skill }}
-                        {{ ticketsService.lastTicket?.cd_number }}
+                    <span class="xxxxl" *ngIf="ticketsService.lastTicket">
+                        <!-- todo: si id_skill no existe es porque el skill fue eliminado. Los skills deberían desactivarse y no borrarse. -->
+                        {{ ticketsService.lastTicket?.id_skill?.cd_skill }}
+                        {{ ticketsService.lastTicket?.id_position }}
                     </span>
                 </div>
 
@@ -158,13 +159,13 @@
                         <td>--</td>
                         <td>--</td>
                     </tr>
-                    <tr *ngFor="let ticket of ticketsService.ticketsTail;">
-                        <td style="text-align: center;">
-                            {{ ticket.id_skill?.cd_skill }}{{ ticket.cd_number }}</td>
+                    <tr *ngFor="let ticket of ticketsService.ticketsTail;"  style="font-size: xx-large; font-weight: 300;">
+                        <td  class="p-1" style="text-align: center;">
+                            {{ ticket.id_skill?.cd_skill }}{{ ticket.id_position }}</td>
 
-                        <td style="text-align: center; ">{{ ticket.id_desk.cd_desktop }}</td>
+                        <td  class="p-1" style="text-align: center; ">{{ ticket.id_session.id_desktop.cd_desktop }}</td>
 
-                        <td style="padding: 0; vertical-align: middle;">
+                        <td  class="p-1" style="padding: 0; vertical-align: middle;">
                             <span *ngIf="!ticket.tm_end" style="color: greenyellow">
                                 <mat-icon style="font-size: xx-large;">campaign</mat-icon>
                             </span>
@@ -223,3 +224,16 @@
 
     </div>
 </div>
+
+
+
+<div *ngIf="!ticketsService.myTicket" class="saturno-footer">
+    <div class="row">
+      <div class="col">
+        <span class="footer-icon-menu" routerLink="/home">
+          <mat-icon>home</mat-icon>
+          <div>Inicio</div>
+        </span>
+      </div>
+    </div>
+  </div>
