--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,4 @@
-<div class="shadow-box animated fadeIn m-4 p-3" style="min-width: 18rem; max-width: 30rem;">
-
+<div class="saturno-container shadow-box animated fadeIn">
     <form autocomplete="off" class="form-container m-3" ngNativeValidate [formGroup]="forma"
         (ngSubmit)="registrarUsuario()" id="loginform" action="index.html">
 
@@ -56,7 +55,17 @@
                 </p>
             </div>
         </div>
-
     </form>
+</div>
 
+
+<div class="saturno-footer">
+    <div class="row">
+        <div class="col">
+            <span class="footer-icon-menu" routerLink="/home">
+                <mat-icon>home</mat-icon>
+                <div>Inicio</div>
+            </span>
+        </div>
+    </div>
 </div>
