--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
-    height: 100%
+    height: 100vh;
 }
 
 body {
+   
     margin      : 0;
     font-family : Roboto, "Helvetica Neue", sans-serif;
     font-style  : normal;
@@ -59,6 +60,44 @@ td {
     margin     : 0px;
 }
 
+.saturno-container {
+    min-width: 18rem;
+    max-width: 30rem;
+    padding: 1em;
+    margin: 1em;
+}
+.saturno-base {
+    height: 8em;
+}
+
+.saturno-footer {
+    background-color: white;
+    padding-top: .3em;
+    padding-bottom: .3em;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1030;
+    /* unselectable */
+    -webkit-touch-callout: none;
+    -webkit-user-select  : none;
+    -khtml-user-select   : none;
+    -moz-user-select     : none;
+    -ms-user-select      : none;
+    user-select          : none;
+}
+
+.footer-icon-menu {
+    cursor   : pointer;
+    font-size: small;
+    opacity  : 0.8;
+    margin   : 0;
+    outline  : none;
+    color    : #0d6ed6;
+
+}
+
 .button {
     border       : none;
     border-radius: 5px;
@@ -70,8 +109,6 @@ td {
     background-color: #f1f1f1;
     color           : #c7c7c7;
 }
-
-
 
 .button-inner {
     font-weight: 300;
@@ -180,7 +217,6 @@ td {
 
 
 
-
 .banner-title {
     font-size  : x-large;
     font-family: unset;
@@ -203,6 +239,7 @@ td {
 
 .banner-content .xxxxl {
     font-size: 3em;
+    font-weight: 500;
 }
 
 .banner-content .xxxl {
@@ -255,12 +292,12 @@ td {
 
 
 .swal2-title {
-    font-size: x-large !important;
+    font-size  : x-large !important;
     font-weight: 300 !important;
-    color: red !important;
+    color      : red !important;
 }
 
 .swal2-content {
-    font-size: medium !important;
+    font-size  : medium !important;
     font-weight: 300 !important;
 }
